iRedMail-0.9.8:
    * Supports new distribution release:
        + OpenBSD 6.2. OpenBSD 6.1 is not supported anymore.
        + Ubuntu 17.10. Ubuntu 14.04 LTS, 17.04 are not supported anymore.

    * Apache has been removed, Nginx is the only one web server available.

    * Improvements:
        - Integrate 'mlmmj' mailing list manager, and 'mlmmj-admin' RESTful API
          server for easy mlmmj management.

            - mlmmj: http://mlmmj.org/
            - mlmmj-admin: https://bitbucket.org/iredmail/mlmmj-admin/src

        - Upgrade rsyslog to latest 8.x on CentOS 6, package comes from
          rsyslog official yum repo.
        - LDAP backend: Allow mail list account to use 2 attributes: member,
          uniqueMember.
        - Dovecot: Log subject, sender, size in mail deliver log.
        - Amavisd: Add new sql column `maddr.email_raw` and trigger to store
          email address without address extension.

    * Fixed issues:
        - installer: not correctly configure SOGo with IPv6 SQL server address.
          Thanks to Wraptor <nijs.thibaut _at_ gmail.com> for the report in
          forum.
        - Postfix: Improper SQL queries used to query per-user bcc address.
        - Nginx: Use single config file for default web hosts.
        - tools/backup_sogo.sh
            - not set correct owner and permission on backup files.
            - cannot remove old backup files.
        - Cannot log backup result to SQL db in tools/backup_openldap.sh.
          Note: backup is fine, just no log in SQL db.
          Thanks swejun <ingvar _at_ zebware.com> for the feedback and fix in
          forum.
        - SQL backends: User under disabled domain is able to send email with
          smtp protocol.
        - Cannot sync contacts on Android devices via EAS with SOGo.
        - tools/create_mail_user_* scripts doesn't use current date as
          password last change date for newly created user.