@@ -40,13 +40,8 @@ export IREDADMIN_UWSGI_PID='/var/run/uwsgi_iredadmin.pid'
 export IREDADMIN_UWSGI_SOCKET_FULL="unix:${IREDADMIN_UWSGI_SOCKET}"
 
 if [ X"${DISTRO}" == X'RHEL' ]; then
-    if [ X"${DISTRO_VERSION}" == X'6' ]; then
-        export IREDADMIN_UWSGI_SOCKET='/var/run/uwsgi_iredadmin.socket'
-        export IREDADMIN_UWSGI_PID='/var/run/uwsgi_iredadmin.pid'
-    else
-        export IREDADMIN_UWSGI_SOCKET='/run/uwsgi/iredadmin.socket'
-        export IREDADMIN_UWSGI_PID='/run/uwsgi/iredadmin.pid'
-    fi
+    export IREDADMIN_UWSGI_SOCKET='/run/uwsgi/iredadmin.socket'
+    export IREDADMIN_UWSGI_PID='/run/uwsgi/iredadmin.pid'
 elif [ X"${DISTRO}" == X'OPENBSD' ]; then
     export IREDADMIN_UWSGI_SOCKET="${HTTPD_SERVERROOT}/run/uwsgi_iredadmin.socket"
     export IREDADMIN_UWSGI_SOCKET_FULL="unix:${IREDADMIN_UWSGI_SOCKET}"
